--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,61 @@ body {
   opacity: 0.8;
 }
 
+/* Add User Modal */
+.modal-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  display: none;
+  left: -2000px;
+}
+.modal-container .content-wrapper {
+  width: 60%;
+  min-height: 80%;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 76px;
+  padding: 20px;
+  background: #fff;
+}
+.modal-container .content-wrapper form {
+  width: 60%;
+  margin: auto;
+}
+.modal-container .content-wrapper .close-btn {
+  font-size: 20px;
+  float: right;
+  margin-top: -38px;
+  display: block;
+  cursor: pointer;
+  border-radius: 12px !important;
+}
+.modal-container .content-wrapper input {
+  -webkit-appearance: none;
+  border-radius: 0;
+  background-color: #ffffff;
+  font-family: inherit;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #cccccc;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.75);
+  display: block;
+  font-size: 0.875rem;
+  margin: 0 0 1rem 0;
+  padding: 0.5rem;
+  height: 2.3125rem;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  transition: box-shadow 0.45s, border-color 0.45s ease-in-out;
+}
+
 @media only screen and (max-width: 768px) {
   .page-container {
     width: 100%;
